--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "main": "./lib/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/jzeltman/iron.git"
@@ -19,6 +20,9 @@
   "bugs": {
     "url": "https://github.com/jzeltman/iron/issues"
   },
+  "bin": {
+    "iron": "bin/iron.js"
+  },
   "homepage": "https://github.com/jzeltman/iron",
   "dependencies": {
     "fs": "0.0.2",
@@ -26,6 +30,10 @@
     "gulp-auto-task": "0.0.1",
     "handlebars": "^3.0.3",
     "inquirer": "^0.8.5",
-    "shelljs": "^0.5.1"
+    "rc": "^1.0.3",
+    "recursive-readdir": "^1.2.1",
+    "shelljs": "^0.5.1",
+    "xml2js": "^0.4.9",
+    "yargs": "^3.15.0"
   }
 }
