--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
   "homepage": "https://github.com/jzeltman/iron",
   "dependencies": {
     "fs": "0.0.2",
+    "get-installed-path": "^1.0.2",
     "gulp": "^3.9.0",
     "gulp-auto-task": "0.0.1",
     "handlebars": "^3.0.3",
     "inquirer": "^0.8.5",
+    "npm": "^2.13.2",
     "rc": "^1.0.3",
     "recursive-readdir": "^1.2.1",
     "shelljs": "^0.5.1",
-    "xml2js": "^0.4.9",
     "yargs": "^3.15.0"
   }
 }
