--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rc": "^1.0.3",
     "recursive-readdir": "^1.2.1",
     "shelljs": "^0.5.1",
+    "through2": "^2.0.0",
     "yargs": "^3.15.0"
   }
 }
