Lots of clean up. - added gulp tasks - cleaned up some of the templates - other bug fixes

--- a/lib/templates/clientlibs/mainScss.scss.template
+++ b/lib/templates/clientlibs/mainScss.scss.template
@@ -1,5 +1,5 @@
 /**
- *  Main css for {{template_name}}
+ *  Main css for {{clientlib_name}}
  */
 
-@import "{{template_name}}.components";
+@import "{{clientlib_name}}.components";
