--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Iron",
+  "name": "iron-fe",
   "version": "0.1.0",
   "description": "An opinionated - yet flexible - front end development framework for use with Adobe Experience Manager",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/jzeltman/iron",
   "dependencies": {
+    "fs-extra": "^0.22.1",
     "get-installed-path": "^1.0.2",
     "gulp": "^3.9.0",
     "gulp-auto-task": "0.0.1",
@@ -35,6 +36,7 @@
     "recursive-readdir": "^1.2.1",
     "shelljs": "^0.5.1",
     "through2": "^2.0.0",
+    "xml2js": "^0.4.9",
     "yargs": "^3.15.0"
   }
 }
