missed the include of iron in the gulp template

--- a/lib/templates/gulp/gulp-es6.template
+++ b/lib/templates/gulp/gulp-es6.template
@@ -1,5 +1,5 @@
 import gulp from 'gulp';
-import iron from 'iron';
+import iron from 'iron-fe';
 
 // Task includes
 import browserify 			from './build-tasks/browserify';
