removed most all of the inquirer cli flow to opt for a much quicker and more "normal" cli experience. Also I am not making a lot more assumptions about how the project should be set up. Taking a lot of the guess work away from the user. This is still a work in progress but it is much closer to a real cli then it was before.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "get-installed-path": "^1.0.2",
     "handlebars": "^4.0.5",
     "inquirer": "^1.0.2",
+    "node-dir": "^0.1.12",
     "npm": "^3.9.0",
     "rc": "^1.0.3",
     "recursive-readdir": "^2.0.0",
