I now have the bundle, client library and the component mechanisms working and usable

--- a/lib/templates/bundles/componentReferance.js.template
+++ b/lib/templates/bundles/componentReferance.js.template
@@ -7,8 +7,6 @@
 
 module.exports = {
 {{#each components}}
-    {{#unless this.isGlobal }}
-    "{{ this.name }}" : require( './../../components/{{ this.name }}' ),
-    {{/unless}}
+    "{{ this }}" : require( './../../components/{{ this }}/{{ this }}.js' ),
 {{/each}}
 }
