--- a/lib/templates/bundles/componentReferanceCss.css.template
+++ b/lib/templates/bundles/componentReferanceCss.css.template
@@ -7,5 +7,5 @@
 
 
 {{#each components}}
-    @import "../../../components/{{this.name}}/styles/{{this.name}}";
+    @import "../../../components/{{this}}/styles/{{this}}";
 {{/each}}
