--- a/lib/templates/bundles/mainJs.js.template
+++ b/lib/templates/bundles/mainJs.js.template
@@ -1,8 +1,8 @@
 /**
- *  This is the main file for {{clientlib_name}}
+ *  This is the main file for {{bundle_name}}
  */
 
-var components          = require( './{{clientlib_name}}.components' );
+var components          = require( './{{bundle_name}}.components' );
 var globalComponent     = require( '../../components/global' );
 
 globalComponent.init( components );
