--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iron-fe",
-  "version": "2.0.7",
+  "version": "2.1.0",
   "description": "An opinionated - yet flexible - front end development framework for use with Adobe Experience Manager",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,7 +8,7 @@
   "main": "./lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jzeltman/iron.git"
+    "url": "https://github.com/Citytechinc/iron.git"
   },
   "keywords": [
     "aem",
