--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "iron-fe",
-  "version": "2.2.2",
+  "version": "2.2.3",
   "description": "An opinionated - yet flexible - front end development framework for use with Adobe Experience Manager",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "./node_modules/babel-cli/bin/babel.js lib -d dist"
   },
   "main": "./lib/index.js",
   "repository": {
@@ -28,7 +28,8 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "fs-extra": "^0.30.0",
-    "get-installed-path": "^1.0.2",
+    "get-installed-path": "^3.0.1",
+    "global-modules": "^1.0.0",
     "handlebars": "^4.0.5",
     "inquirer": "^1.0.2",
     "node-dir": "^0.1.12",
@@ -40,5 +41,11 @@
     "underscore": "^1.8.3",
     "xml2js": "^0.4.9",
     "yargs": "^4.7.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "nodemon": "^1.12.0"
   }
 }
