--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "iron-fe",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "An opinionated - yet flexible - front end development framework for use with Adobe Experience Manager",
   "scripts": {
     "build": "./node_modules/babel-cli/bin/babel.js lib -d dist"
   },
-  "main": "./lib/index.js",
+  "main": "./dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Citytechinc/iron.git"
