small fixes and changes

--- a/lib/templates/bundles/ironDefaultComponentReferance.js.template
+++ b/lib/templates/bundles/ironDefaultComponentReferance.js.template
@@ -7,6 +7,6 @@
 
 module.exports = {
 {{#each components}}
-    "{{ this }}" : require( './../../components/{{ this }}/{{ this }}.js' ),
+    '{{ this }}' : require( './../../components/{{ this }}/{{ this }}.js' ),
 {{/each}}
 }
