updated the default template fro component reference

--- a/lib/templates/bundles/ironDefaultComponentReferance.js.template
+++ b/lib/templates/bundles/ironDefaultComponentReferance.js.template
@@ -5,7 +5,7 @@
 *
 */
 
-module.exports = {
+export default = {
 {{#each components}}
     '{{ this }}' : require( './../../components/{{ this }}/{{ this }}.js' ),
 {{/each}}
